# wiki_verify

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  app.py  article_standardise.py  citation_get.py  citation_scraper.py  main.py  programIO.py  pyproject.toml  requirements.txt  setup.cfg  standalone.py  text_tagging.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml
source/: __metadata__.py  analytics.py  article_standardise.py  citation_get.py  citation_scraper.py  correction.py  filter_title.py  main.py  programIO.py  session.py  text_tagging.py  web_scraper.py
source/dataparsing/: article_standardise.py  correction.py  text_tagging.py  wikitext_extract.py
source/io/: filter_title.py  output.py  web_scraper.py
source/legacy/: main.py
src/: __metadata__.py  main.py
src/dataparsing/: article_standardise.py  correction.py  wikitext_extract.py
src/io/: filter_title.py  output.py  web_scraper.py
static/: bootstrap.css
templates/: article.html  article_errors.html  article_start.html  dashboard.html  index.html  robots.txt
