[tool.poetry]
name = "wiki-verify"
version = "0.9.91"
description = "Uses natural-language processing to help fact-check information in English-language Wikipedia articles by comparing information in the article against the text of its citations."
authors = ["Guy Keogh <guykeogh[at]proton.me>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
nltk = "^3.7"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
wikitextparser = "^0.50.1"

[tool.poetry.dev-dependencies]
waitress = "^2.1.2"
flask = "^2.2.2"
flask_session = "^0.4.0"
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest = "^7.1.3"
mypy = "^0.971"
types-requests = "2.28.9"
types-waitress = "2.1.4"