[tool.poetry]
name = "wiki-verify"
version = "0.9.91"
description = "Uses natural-language processing to help fact-check information in English-language Wikipedia articles by comparing information in the article against the text of its citations."
authors = ["Guy Keogh <guykeogh[at]proton.me>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
nltk = "3.8.1"
requests = "2.28.2"
beautifulsoup4 = "^4.11.1"
wikitextparser = "0.51.1"

[tool.poetry.dev-dependencies]
waitress = "^2.1.2"
flask = "^2.2.2"
flask_session = "^0.4.0"
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "5.0.4"
pytest = "^7.2.1"
mypy = "^0.991"
types-requests = "2.28.11.8"
types-waitress = "2.1.4.4"
